--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,10 +3,6 @@ server:
 
 logging.level: error
 
-#spring:
-#  datasource:
-#    url: jdbc:h2:mem:example-simple;MODE=Oracle;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-
 spring:
   jpa:
     database: mysql
@@ -14,7 +10,7 @@ spring:
   datasource:
     driver-class-processDefinitionName: com.mysql.jdbc.Driver
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:mysql://localhost:3306/camunda?useSSL=false
+    url: jdbc:mysql://localhost:3306/orchestrator?useSSL=false
     username: root
     password: mysql
     hikari:
