--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     type: com.zaxxer.hikari.HikariDataSource
     url: jdbc:mysql://localhost:3306/orchestrator?useSSL=false
     username: root
-    password: mysql
+    password: root
     hikari:
       maximum-pool-size: 10
 
