--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     type: com.zaxxer.hikari.HikariDataSource
     url: jdbc:mysql://localhost:3306/orchestrator?useSSL=false
     username: root
-    password: root
+    password: mysql
     hikari:
       maximum-pool-size: 10
 
@@ -44,9 +44,9 @@ access:
   ribbon:
     eureka:
       enabled: false
-    listOfServers: http://localhost:8080
+    listOfServers: http://localhost:8081
 notice:
   ribbon:
     eureka:
       enabled: false
-    listOfServers: http://localhost:8080
+    listOfServers: http://localhost:8082
