--- a/pom.xml
+++ b/pom.xml
@@ -203,11 +203,17 @@
             <version>2.5.1</version>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.40</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4.1208.jre7</version>
             <scope>runtime</scope>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>mysql</groupId>-->
+            <!--<artifactId>mysql-connector-java</artifactId>-->
+            <!--<version>5.1.40</version>-->
+            <!--<scope>runtime</scope>-->
+        <!--</dependency>-->
         <!--Test-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
