add kafka logic for chronograph integration

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <jacoco-maven-plugin.version>0.7.9</jacoco-maven-plugin.version>
         <maven-surefire-plugin.version>2.19</maven-surefire-plugin.version>
         <maven-failsafe-plugin.version>2.19</maven-failsafe-plugin.version>
+        <spring-kafka.version>1.2.2.RELEASE</spring-kafka.version>
     </properties>
 
     <profiles>
@@ -214,6 +215,19 @@
             <!--<version>5.1.40</version>-->
             <!--<scope>runtime</scope>-->
         <!--</dependency>-->
+
+        <!-- spring-kafka -->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+            <version>${spring-kafka.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka-test</artifactId>
+            <version>${spring-kafka.version}</version>
+            <scope>test</scope>
+        </dependency>
         <!--Test-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
