--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -6,10 +6,7 @@ spring:
   application:
     name: orchestrator
 
-#  cloud:
-#    config:
-#      failFast: true
-#      name: Notifier
-#      label: v1
-#      username:
-#      password:
+  cloud:
+    config:
+      failFast: true
+      name: orchestrator
