--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,3 @@
-server:
-  port: 8900
-
-logging.level: error
-
 spring:
   jpa:
     database: postgresql
@@ -10,7 +5,7 @@ spring:
   datasource:
     driver-class-processDefinitionName: org.postgresql.Driver
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/orchestrator
+    url: jdbc:postgresql://postgresql:5432/orchestrator
     username: postgres
     password: postgres
     hikari:
@@ -18,35 +13,41 @@ spring:
 
   data:
     cassandra:
-      contact-points: 127.0.0.1
+      contact-points: AC-node1,AC-node2,AC-node3
       keyspace-name: ocds
       port: 9042
-      username: cassandra
-      password: cassandra
+      username: caclient
+      password: brT4Kn27RQs
+
+eureka:
+  client:
+    fetchRegistry: true
+    registerWithEureka: true
+    serviceUrl:
+      defaultZone: http://eureka-peer-1:8800/eureka/,http://eureka-peer-2:8800/eureka/
 
 kafka:
   producer:
-    bootstrap: localhost:9092
-    topic: orchestrator
+    bootstrap: AK-node1:9092,AK-node2:9092,AK-node3:9092
+    topic: chronograph_in
   consumer:
-    bootstrap: localhost:9092
+    bootstrap: AK-node1:9092,AK-node2:9092,AK-node3:9092
     group: orchestrator
-    topic: chronograph
-
-ocds.prefix: ocds-t1s2t3
+    topic: chronograph_out
 
 camunda:
   bpm:
     auto-deployment-enabled: true
     history-level: none
 
-access:
-  ribbon:
-    eureka:
-      enabled: false
-    listOfServers: http://localhost:8081
-notice:
-  ribbon:
-    eureka:
-      enabled: false
-    listOfServers: http://localhost:8082
+#e-access:
+#  ribbon:
+#    eureka:
+#      enabled: true
+#e-notice:
+#  ribbon:
+#    eureka:
+#      enabled: true
+
+ocds:
+  prefix: ocds-t1s2t3
