--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        <!--Spring Cloud-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka</artifactId>
+        </dependency>
         <!--BPM-->
         <dependency>
             <groupId>org.camunda.bpm.springboot</groupId>
@@ -209,16 +218,8 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.4.1208.jre7</version>
             <scope>runtime</scope>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>mysql</groupId>-->
-        <!--<artifactId>mysql-connector-java</artifactId>-->
-        <!--<version>5.1.40</version>-->
-        <!--<scope>runtime</scope>-->
-        <!--</dependency>-->
-
          <!--spring-kafka-->
         <dependency>
             <groupId>org.springframework.kafka</groupId>
@@ -267,14 +268,12 @@
             <version>1.0.0</version>
             <scope>test</scope>
         </dependency>
-
         <!--Apache lib-->
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
-
         <!--Plugin-->
         <dependency>
             <groupId>org.projectlombok</groupId>
