add exception handler

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -40,28 +40,21 @@ camunda:
     auto-deployment-enabled: true
     history-level: none
 
+ribbon:
+   eureka:
+    enabled: false
 e-submission:
   ribbon:
-    eureka:
-      enabled: false
     listOfServers: http://localhost:8081
 e-clarification:
   ribbon:
-    eureka:
-      enabled: false
     listOfServers: http://localhost:8082
 e-access:
   ribbon:
-    eureka:
-      enabled: false
     listOfServers: http://localhost:8083
 e-storage:
   ribbon:
-    eureka:
-      enabled: false
     listOfServers: http://localhost:8600
 e-notice:
   ribbon:
-    eureka:
-      enabled: false
     listOfServers: http://localhost:8088
