--- a/pom.xml
+++ b/pom.xml
@@ -51,10 +51,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <!--Spring Cloud-->
-        <!--<dependency>-->
-        <!--<groupId>org.springframework.cloud</groupId>-->
-        <!--<artifactId>spring-cloud-starter-config</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-config</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
@@ -110,7 +110,7 @@
             <artifactId>HikariCP</artifactId>
             <version>2.5.1</version>
         </dependency>
-         <!--Test-->
+        <!--Test-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
