--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,9 +42,11 @@ camunda:
     history-level: none
 
 feign:
-
-  hystrix:
-    enabled: true
+  client:
+    config:
+      default:
+        connectTimeout: 5000
+        readTimeout: 5000
 
 ribbon:
    eureka:
