--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,10 +16,10 @@ spring:
       pool-name: orchestrator-pool
 
 cassandra:
-  contact-points: 10.0.10.104,10.0.10.105,10.0.10.106
+  contact-points: 10.0.20.104,10.0.20.105,10.0.20.106
   keyspace-name: ocds
   username: caclient
-  password: brT4Kn27RQs
+  password: 6AH7vbrkMWnfK
 
 eureka:
   client:
@@ -46,28 +46,28 @@ ribbon:
     enabled: false
 e-budget:
   ribbon:
-    listOfServers: http://10.0.10.116:9051
+    listOfServers: http://10.0.20.116:9051
 e-access:
   ribbon:
-    listOfServers: http://10.0.10.116:9031
+    listOfServers: http://10.0.20.116:9031
 e-notice:
   ribbon:
-    listOfServers: http://10.0.10.116:9041
+    listOfServers: http://10.0.20.116:9041
 e-submission:
   ribbon:
-    listOfServers: http://10.0.10.116:9061
+    listOfServers: http://10.0.20.116:9061
 e-clarification:
   ribbon:
-    listOfServers: http://10.0.10.116:9071
+    listOfServers: http://10.0.20.116:9071
 e-storage:
   ribbon:
-    listOfServers: http://10.0.10.116:9131
+    listOfServers: http://10.0.20.116:9131
 e-qualification:
   ribbon:
-    listOfServers: http://10.0.10.116:9091
+    listOfServers: http://10.0.20.116:9091
 e-evaluation:
   ribbon:
-    listOfServers: http://10.0.10.116:9081
+    listOfServers: http://10.0.20.116:9081
 e-contracting:
   ribbon:
-    listOfServers: http://10.0.10.116:9151
+    listOfServers: http://10.0.20.116:9151
