--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.procurement</groupId>
     <artifactId>orchestrator</artifactId>
-    <version>17.12.1</version>
+    <version>18.06.1</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -31,7 +31,7 @@
         <netty.version>4.1.17.Final</netty.version>
         <docker-image-profile></docker-image-profile>
         <docker-maven-plugin.version>0.23.0</docker-maven-plugin.version>
-        <docker-registry>dev.docker-registry.eprocurement.systems</docker-registry>
+        <docker-registry>docker-registry.eprocurement.systems</docker-registry>
     </properties>
 
     <dependencyManagement>
