--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -75,6 +75,6 @@ e-mdm:
 
 logging:
   level:
-    root: WARN
+    root: INFO
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n"
