--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   profiles:
     active: local
   application:
-    name: orchestrator
+    name: bpe
   datasource:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://10.0.20.112:5432/orchestrator
