--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <spring-kafka.version>2.1.0.RELEASE</spring-kafka.version>
         <netty.version>4.1.17.Final</netty.version>
         <!--Docker-->
-        <docker-registry>docker.io/eprocurementsystems</docker-registry>
+        <docker-registry>docker-registry.eprocurement.systems</docker-registry>
         <docker-image-profile></docker-image-profile>
         <docker-maven-plugin.version>0.24.0</docker-maven-plugin.version>
     </properties>
