commits to version

--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
         <spring-kafka.version>2.1.0.RELEASE</spring-kafka.version>
         <netty.version>4.1.17.Final</netty.version>
         <!--Docker-->
-        <docker-registry>docker.io/eprocurementsystems</docker-registry>
-        <!--<docker-registry>docker-registry.eprocurement.systems</docker-registry>-->
+        <!--<docker-registry>docker.io/eprocurementsystems</docker-registry>-->
+        <docker-registry>docker-registry.eprocurement.systems</docker-registry>
         <docker-image-profile></docker-image-profile>
         <docker-maven-plugin.version>0.24.0</docker-maven-plugin.version>
     </properties>
@@ -172,6 +172,7 @@
                     <include>processes/</include>
                     <include>bootstrap.yml</include>
                     <include>banner.txt</include>
+                    <include>git.properties</include>
                 </includes>
             </resource>
         </resources>
@@ -210,7 +211,7 @@
                     <images>
                         <image>
                             <registry>${docker-registry}</registry>
-                            <name>${docker-registry}/${project.artifactId}${docker-image-profile}:${project.version}
+                            <name>${docker-registry}/${project.artifactId}${docker-image-profile}:${project.version}.${git.commit.id.abbrev}
                             </name>
                             <build>
                                 <dockerFileDir>${project.basedir}/src/main</dockerFileDir>
