commits to version

--- a/pom.xml
+++ b/pom.xml
@@ -211,7 +211,8 @@
                     <images>
                         <image>
                             <registry>${docker-registry}</registry>
-                            <name>${docker-registry}/${project.artifactId}${docker-image-profile}:${project.version}-${git.commit.id.abbrev}
+                            <name>
+                                ${docker-registry}/${project.artifactId}${docker-image-profile}:${project.version}-${git.commit.id.abbrev}
                             </name>
                             <build>
                                 <dockerFileDir>${project.basedir}/src/main</dockerFileDir>
