commits to version

--- a/pom.xml
+++ b/pom.xml
@@ -172,36 +172,13 @@
                     <include>processes/</include>
                     <include>bootstrap.yml</include>
                     <include>banner.txt</include>
-                    <include>git.properties</include>
-                </includes>
+                  </includes>
             </resource>
         </resources>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>build-info</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>pl.project13.maven</groupId>
-                <artifactId>git-commit-id-plugin</artifactId>
-                <configuration>
-                    <includeOnlyProperties>
-                        <includeOnlyProperty>^git.branch$</includeOnlyProperty>
-                        <includeOnlyProperty>^git.build.host$</includeOnlyProperty>
-                        <includeOnlyProperty>^git.build.time$</includeOnlyProperty>
-                        <includeOnlyProperty>^git.commit.id$</includeOnlyProperty>
-                        <includeOnlyProperty>^git.commit.id.abbrev$</includeOnlyProperty>
-                        <includeOnlyProperty>^git.commit.user.email$</includeOnlyProperty>
-                        <includeOnlyProperty>^git.tags$</includeOnlyProperty>
-                    </includeOnlyProperties>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>io.fabric8</groupId>
@@ -212,7 +189,7 @@
                         <image>
                             <registry>${docker-registry}</registry>
                             <name>
-                                ${docker-registry}/${project.artifactId}${docker-image-profile}:${project.version}-${git.commit.id.abbrev}
+                                ${docker-registry}/${project.artifactId}${docker-image-profile}:${project.version}
                             </name>
                             <build>
                                 <dockerFileDir>${project.basedir}/src/main</dockerFileDir>
